reworked nodetable and edgetable so that id's fit the naming convention